tests/fixtures/guardrails/valid/scripts/docs-note.mjs
const docsUrl = "https://shopify.dev/docs/api/admin-graphql";
const adminPathMention = "/admin/api/2026-01/graphql.json";

export function explainGuardrail() {
  return `See ${docsUrl}; example path ${adminPathMention} is documentation only.`;
}
